k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rao-travels
  labels:
    name: rao-travels
