k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: rao-travels
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: rao-travels
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
